<resources>
    <string name="app_name">WestDEREPOSTEL</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="services">Services</string>
    <string name="operator_login">Operator Login</string>
    <string name="notifications">Notifications</string>
    <string name="guide">Guide</string>
    <string name="west_regional_delegation_of_post_and_telecommunications">West Regional Delegation of Post and Telecommunications</string>

    <string name="newsDetails" translatable="false">Projet d’Accélération de la Transformation Numérique au Cameroun
                               (PATNuC) Les documents de sauvegarde en téléchargement 1. Manuel de
                                procédure de gestion du travail (LMP) 2. Cadre de Politique de
                                Réinstallation (CPR) 3. Cadre de gestion environnementale et sociale
                                4. Elaboration d\'un cadre de planification pour
    </string>

    <string name="guideText" translatable="false">CONNECTED AFRICAN GIRLS MINPOSTEL encourages the females in the STEAM
                             to bridge the growing gender digital divide in our society. They are
                             150 young girls between the ages 12 and 25 that are counted amongst the
                             lucky to partake in the 2021 coding camp in Yaounde from the 5th - 16th
                             July 2021.
                             CONNECTED AFRICAN GIRLS MINPOSTEL encourages the females in the STEAM
                             to bridge the growing gender digital divide in our society. They are
                             150 young girls between the ages 12 and 25 that are counted amongst the
                             lucky to partake in the 2021 coding camp in Yaounde from the 5th - 16th
                             July 2021.
                             CONNECTED AFRICAN GIRLS MINPOSTEL encourages the females in the STEAM
                             to bridge the growing gender digital divide in our society. They are
                             150 young girls between the ages 12 and 25 that are counted amongst the
                             lucky to partake in the 2021 coding camp in Yaounde from the 5th - 16th
                             July 2021.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="delegate_s_chambers">Delegate\'s Chambers</string>
    <string name="general_affairs">General Affairs</string>
    <string name="network_security">Network Security</string>
    <string name="electronic_communications">Electronic Communications</string>
    <string name="follow_up_and_postal_activities">Follow_Up and Postal Activities</string>
    <string name="regional_brigade">Regional Brigade</string>
    <string name="peace_work_fatherland">Peace Work  Fatherland</string>
    <string name="nnew">New?</string>
    <string name="email">email</string>
    <string name="personal_code_here">password here...</string>
    <string name="registration">Registration</string>
    <string name="username">username</string>
    <string name="register_btn">Register</string>
    <string name="upload_image">Image here</string>
    <string name="login">Login</string>
    <string name="log_out">Logout</string>
    <string name="words_of_the_delegate">Monthly Greetings to all my colleagues,
                                            I hope you all are doing well, this month is come with
                                          so much work and expectations from us. So I pray we continue
                                          with the resilience and hard work that has always kept us moving.
                                          I wish you all the best, and stay safe everyone.</string>
    <string name="the_delegate">THE DELEGATE</string>
    <string name="mr_fuafung_johnson">Mr. FUAFUNG JOHNSON</string>
    <string name="chief_of_service">Chief of Service</string>
    <string name="chat_room">Chat Room</string>
    <string name="schedules">Schedules</string>
    <string name="operators">Operators</string>
    <string name="cloud_files">Cloud Files</string>
    <string name="news_in_the_ministry">News in the Ministry</string>
    <string name="general_affairs_service">GENERAL AFFAIRS SERVICE</string>
    <string name="operator_verification">Operator Verification</string>
    <string name="enter_your_accesscode">Enter your accessCode</string>
    <string name="enter_your_email_here">Enter your email here...</string>
    <string name="check_in">Check In</string>
    <string name="messaging">messaging</string>
    <string name="name_of_operator">Name of Operator</string>
    <string name="welcome_text">Welcome to our platform. Together Let us make our Region a better place.</string>
    <string name="add_operator">Add Operator</string>
    <string name="save">Save</string>
    <string name="add_logo">Add Logo</string>
    <string name="access_code">Access Code</string>
    <string name="location">Location</string>
    <string name="activity">Activity</string>
    <string name="phone">Phone</string>
    <string name="email1">Email</string>
    <string name="name">Name</string>
    <string name="new_operator">New Operator</string>
    <string name="home">Home</string>
    <string name="proud_of_bafoussam">Proud of Bafoussam</string>
    <string name="enter_secret_code_here">Enter secret code</string>
    <string name="please_wait">Please wait...</string>
    <string name="schedules_and_to_do">Schedules and To Do</string>
    <string name="add_an_item">Add an Item</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="my_to_do_list">My To Do List</string>
    <string name="meeting_schedules">Meeting Schedules</string>
    <string name="select_image">Select Image</string>
    <string name="upload_imagee">Upload Image</string>
    <string name="upload">Upload</string>
    <string name="show_all">Show All</string>
    <string name="select_file">Select File</string>
    <string name="no_file_is_selected_yet">No file is selected yet</string>
    <string name="fetch_files">Fetch Files</string>
    <string name="send">Send</string>
    <string name="type_message">Type Message...</string>


</resources>