<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



            <item
                android:id="@+id/idNavServices"
                android:icon="@drawable/ic_baseline_services_24"
                android:title="@string/services" />



            <item
                android:id="@+id/nav_operator_login"
                android:icon="@drawable/update_login"
                android:title="@string/operator_login" />



            <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_baseline_notifications_active_24"
                android:title="@string/notifications" />


            <item
                android:id="@+id/nav_guide"
                android:icon="@drawable/ic_baseline_directions_24"
                android:title="@string/guide" />


</menu>