<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CloudActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/idCloudToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="         Cloud"
        app:subtitle="Save/Retrieve Files"/>

    <Button
        android:id="@+id/idFetchFilesBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/idCloudToolbar"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:text="@string/fetch_files"
        android:textSize="18sp" />

    <Button
        android:id="@+id/idSelectFileBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/select_file"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_below="@id/idFetchFilesBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/idNotificationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idSelectFileBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/no_file_is_selected_yet"
        android:textSize="20sp" />

    <Button
        android:id="@+id/idUploadBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/idNotificationTextView"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/upload"
        android:textSize="18sp" />

</RelativeLayout>