<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBF5F8"
    tools:context=".operators1.AddOperatorActivity1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/idImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/idSelectPhotoAddOperatorBtn1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/register_image_btn_bg"
            android:text="Image"
            app:layout_constraintBottom_toBottomOf="@id/idSelectPhotoAddOperatorImageView1"
            app:layout_constraintEnd_toEndOf="@id/idSelectPhotoAddOperatorImageView1"
            app:layout_constraintStart_toStartOf="@id/idSelectPhotoAddOperatorImageView1"
            app:layout_constraintTop_toTopOf="@id/idSelectPhotoAddOperatorImageView1" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/idSelectPhotoAddOperatorImageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/avatar_profile_picture_vector"
            app:civ_border_width="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idImageView" />


        <TextView
            android:id="@+id/idNewOperatorHeader1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="8dp"
            android:text="@string/new_operator"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/idOperatorNameEditText1"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input"
            android:hint="@string/name"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idSelectPhotoAddOperatorImageView1" />

        <EditText
            android:id="@+id/idOperatorEmailEditText1"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input"
            android:hint="@string/email1"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idOperatorNameEditText1" />

        <EditText
            android:id="@+id/idOperatorPhoneEditText1"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input"
            android:hint="@string/phone"
            android:inputType="number|phone"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idOperatorEmailEditText1" />



        <EditText
            android:id="@+id/idActivityEditText1"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input"
            android:hint="@string/activity"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idOperatorPhoneEditText1" />

        <EditText
            android:id="@+id/idLocationEditText1"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input"
            android:hint="@string/location"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idActivityEditText1" />

        <EditText
            android:id="@+id/idAccessCodeEditText1"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input"
            android:hint="@string/access_code"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idLocationEditText1" />

        <Button
            android:id="@+id/idSaveOperatorBtn1"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="708dp"
            android:background="@drawable/main_btn_bg"
            android:text="@string/save"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/add_logo"
            app:layout_constraintBottom_toBottomOf="@id/idSelectPhotoAddOperatorImageView1"
            app:layout_constraintEnd_toStartOf="@id/idSelectPhotoAddOperatorImageView1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/idSelectPhotoAddOperatorImageView1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>