<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElectronicCommunicationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/idElectronicCommunicationsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:subtitle="@string/home"
        app:title="@string/electronic_communications"
        app:titleMarginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/idElectronicCommunicationsMainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/content_main_header_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idElectronicCommunicationsToolbar">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/idServiceImage"
            android:layout_width="230dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/mr_emmanuel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/Circular1" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/idProfileImageElecCom"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:civ_border_width="2dp"
            android:src="@drawable/avatar_profile_picture_vector"
            app:civ_border_color="@color/white"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/idServiceImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/idProfileName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="cursive"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/idServiceImage"
            app:layout_constraintTop_toBottomOf="@id/idProfileImageElecCom" />

        <TextView
            android:id="@+id/IdServiceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:text="@string/chief_of_service"
            android:textColor="#9A8686"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/idServiceImage"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="@+id/idServiceImage"
            app:layout_constraintTop_toBottomOf="@+id/idServiceImage" />

        <TextView
            android:id="@+id/IdServiceHeadName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:text="Mr. NOUBOU Emmanuel"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/IdServiceTitle"
            app:layout_constraintStart_toStartOf="@id/IdServiceTitle"
            app:layout_constraintTop_toBottomOf="@id/IdServiceTitle" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/encloseButtons"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/idCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idElectronicCommunicationsMainHeader">


        <Button
            android:id="@+id/idChatRoomBtn2"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_btn_bg"
            android:text="@string/chat_room"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/idOperatorsBtn2"
            app:layout_constraintEnd_toStartOf="@id/idSchedulesBtn2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/idSchedulesBtn2"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_btn_bg"
            android:text="@string/schedules"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/idCloudFilesButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/idChatRoomBtn2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/idOperatorsBtn2"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_btn_bg"
            android:text="@string/operators"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/idCloudFilesButton2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idChatRoomBtn2" />

        <Button
            android:id="@+id/idCloudFilesButton2"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_btn_bg"
            android:text="@string/cloud_files"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/idOperatorsBtn2"
            app:layout_constraintTop_toBottomOf="@id/idSchedulesBtn2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/idCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardCornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/encloseButtons">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/idNewsTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/btn_stroke"
                android:gravity="center_horizontal"
                android:text="@string/news_in_the_ministry"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idNewsDesc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idNewsTitle2"
                android:layout_margin="4dp"
                android:background="@drawable/btn_stroke"
                android:justificationMode="inter_word"
                android:padding="15dp"
                android:text="@string/newsDetails"
                android:textSize="16sp" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>